syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ukg.surge.multilanguage.protobuf";

message State {
  string aggregateId = 1;
  bytes payload = 2;
}

message Command {
  string aggregateId = 1;
  bytes payload = 2;
}

message Event {
  string aggregateId = 1;
  bytes payload = 2;
}

message ProcessCommandRequest {
  string aggregateId = 1;
  State state = 2;
  Command command = 3;
}

message ProcessCommandReply {
  string aggregateId = 1;
  bool isSuccess = 2;
  string rejectionMessage = 3;  // non-empty when isSuccess = false
  repeated Event events = 4;
  State newState = 5;
}

message HandleEventsRequest {
  string aggregateId = 1;
  State state = 2;
  repeated Event events = 3;
}

message HandleEventsResponse {
  string aggregateId = 1;
  State state = 2;
}

message ForwardCommandRequest {
  string aggregateId = 1;
  Command command = 2;
}

message ForwardCommandReply {
  string aggregateId = 1;
  bool isSuccess = 2;
  string rejectionMessage = 3; // non-empty when isSuccess = false
  State newState = 4;
  repeated Event loggedEvents = 5;
}

message GetStateRequest {
  string aggregateId = 1;
}

message GetStateReply {
  string aggregateId = 1;
  State state = 2;
}

service MultilanguageGatewayService {
  rpc ForwardCommand (ForwardCommandRequest) returns (ForwardCommandReply) {}
  rpc GetState (GetStateRequest) returns (GetStateReply) {}
}

service BusinessLogicService {
  rpc ProcessCommand (ProcessCommandRequest) returns (ProcessCommandReply) {}
  rpc HandleEvents (HandleEventsRequest) returns (HandleEventsResponse) {}
}
